--- a/Prelim/Problem Set/ps-no-2.html
+++ b/Prelim/Problem Set/ps-no-2.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Aaron Nadela's Favorite Song</title>
+        <title>Dear John </title>
     </head>
-    <body style="background:rgb(13, 16, 161)">
+    <body style="background:wheat">
         
-        <h1 style="color:black;">My Favorite Song</h1>
         <h2 style="color: black;">Dear John by Taylor Swift</h2>
-        <img src="dearjohn.jpeg" alt="A man" width="300" height="300"; style="border-style:groove; border-color: gray; border-width: 10px;">
+        <img src="DEAR JOHN.JPG" alt="A man" width="300" height="300"; style="border-style:groove; border-color: gray; border-width: 10px;">
+        <img src="recording.gif" width="150" height="150">
         <h3 style="color:black; font-size:4ch;">Lyrics:</h3>
+        <h4 style="color:black; font-size:4ch;">I.</h4>
         <p style="color:black; font-size: 3ch;">Long were the nights when my <br>
             Days once revolved around you <br>
             Counting my footsteps' <br>
@@ -23,6 +24,8 @@
             Wondering which version of you I might get on the phone Tonight <br>
             Well, I stopped picking up, and this song is to let you know why</p>
 
+         <h5 style="color:black; font-size:3ch;">Chorus:</h5>
+         
         <p style="color:black; font-size: 3ch;">Dear John <br>
             I see it all now that you're gone <br>
             Don't you think I was too young to be messed with? <br>
@@ -75,6 +78,7 @@
             Don't you think I was too young? <br>
             You should've known</p>
 
+            <h6 style="color:black; font-size:3ch;">by: Almighty Aaron Nadela</h6>
 
 </body>
 
